--- a/wp-content/themes/norcal-sbdc-ip/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc-ip/assets/css/style.css
@@ -32742,9 +32742,25 @@ blockquote,
         #footer-primary-navigation ul.menu > li > a {
           display: none; }
   #footer-primary-navigation a {
-    color: #baae95; }
+    color: #baae95;
+    display: inline-block;
+    position: relative;
+    padding-bottom: 4px; }
     #footer-primary-navigation a:hover {
       color: #a58a57; }
+      #footer-primary-navigation a:hover::before {
+        opacity: 1; }
+    #footer-primary-navigation a::before {
+      content: '';
+      display: block;
+      position: absolute;
+      left: 0;
+      bottom: 2px;
+      right: 0;
+      border-top: 4px solid #5e6472;
+      opacity: 0;
+      -webkit-transition: opacity .15s;
+      transition: opacity .15s; }
 
 #footer-primary-cta-links {
   max-width: none; }
