--- a/wp-content/themes/norcal-sbdc-ip/assets/src/scss/imports/_template.scss
+++ b/wp-content/themes/norcal-sbdc-ip/assets/src/scss/imports/_template.scss
@@ -310,8 +310,25 @@
 	}
 	a {
 		color: $tan;
+		display: inline-block;
+		position: relative;
+		padding-bottom: 4px;
 		&:hover {
 			color: $gold;
+			&::before {
+				opacity: 1;
+			}
+		}
+		&::before {
+			content: '';
+			display: block;
+			position: absolute;
+			left: 0;
+			bottom: 2px;
+			right: 0;
+			border-top: 4px solid mix($dark-blue, #fff, 80%);
+			opacity: 0;
+			transition: opacity .15s;
 		}
 	}
 }
