--- a/wp-content/themes/norcal-sbdc-ip/assets/src/scss/imports/_template.scss
+++ b/wp-content/themes/norcal-sbdc-ip/assets/src/scss/imports/_template.scss
@@ -39,6 +39,10 @@
 	}
 }
 
+#site-title .title {
+	margin-bottom: 0;
+}
+
 #header-primary-navigation {
 	margin-top: 0;
 	margin-bottom: 0;
@@ -196,8 +200,26 @@
 		font-family: $font-family-sans-serif;
 	}
 }
-#mobile-menu-toggle .label {
-	font-family: $font-family-sans-serif-alt;
+#mobile-menu-toggle {
+	.label {
+		font-family: $font-family-sans-serif-alt;
+		display: none;
+	}
+	.icon {
+		width: 1.5rem;
+		background-color: $gold;
+		#header.is-sticky & {
+			background-color: $gold;
+		}
+		&::before,
+		&::after {
+			width: 100%;
+			background-color: $gold;
+			#header.is-sticky & {
+				background-color: $gold;
+			}
+		}
+	}
 }
 
 
